# Ubag_protocol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.js  demo.py
tests/fixtures/: expected_jsonld.json  graph.html  product.html
ubag-node/: README.md  package-lock.json  package.json
ubag-node/src/: AgentCredential.js  agentsJson.js  cache.js  challenge.js  credential.js  extract.js  index.js  keys.js  markdown.js  routing.js  sux.js
ubag-node/src/middleware/: express.js
ubag-node/tests/: challenge.test.js  credential.test.js  extract.test.js  middleware.test.js  routing.test.js
ubag-python/: README.md  pyproject.toml
ubag-python/src/ubag/: __init__.py  _agents_json.py  _cache.py  _challenge.py  _credential.py  _extract.py  _keys.py  _markdown.py  _routing.py  _sux.py  agent.py
ubag-python/src/ubag/middleware/: fastapi.py
ubag-python/tests/: test_challenge.py  test_credential.py  test_extract.py  test_extract_middleware.py  test_middleware_fastapi.py  test_parity.py  test_routing.py
