[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubag"
version = "0.5.0"
description = "Agent identity and routing middleware for MCP-compatible agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mohamed Ben Hadj Hmida" }]
keywords = ["mcp", "agents", "ai", "middleware", "routing", "bot-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
]
dependencies = [
    "PyJWT[crypto]>=2.8.0",
    "cryptography>=42.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.111.0", "starlette>=0.37.0"]
django = ["django>=4.2"]
flask = ["flask>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "starlette>=0.37.0",
]

[project.urls]
Homepage = "https://ubagprotocol.com"
Repository = "https://github.com/mohameduk/Ubag_protocol"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
